--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -2,8 +2,11 @@ name: Daily Commit
 
 on:
   schedule:
-    - cron: '17 4 * * *'  # Runs daily at 04:17 UTC
-  workflow_dispatch:       # Optional: allows manual triggering
+    - cron: '17 4 * * *'
+  workflow_dispatch:
+
+permissions:
+  contents: write  # ✅ Required to allow git push
 
 jobs:
   daily-update:
@@ -12,6 +15,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create a dummy file or update timestamp
         run: |
