--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -1,31 +1,31 @@
-name: Daily Commit
+# name: Daily Commit
 
-on:
-  schedule:
-    - cron: '17 4 * * *'
-  workflow_dispatch:
+# on:
+#   schedule:
+#     - cron: '17 4 * * *'
+#   workflow_dispatch:
 
-permissions:
-  contents: write  # ✅ Required to allow git push
+# permissions:
+#   contents: write  # ✅ Required to allow git push
 
-jobs:
-  daily-update:
-    runs-on: ubuntu-latest
+# jobs:
+#   daily-update:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v4
+#         with:
+#           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Create a dummy file or update timestamp
-        run: |
-          echo "Last update: $(date -u)" > daily_status.txt
+#       - name: Create a dummy file or update timestamp
+#         run: |
+#           echo "Last update: $(date -u)" > daily_status.txt
 
-      - name: Commit changes by 24f2005252@ds.study.iitm.ac.in
-        run: |
-          git config --global user.name "Daily Bot"
-          git config --global user.email "24f2005252@ds.study.iitm.ac.in"
-          git add daily_status.txt
-          git commit -m "Daily update $(date -u)" || echo "No changes to commit"
-          git push
+#       - name: Commit changes by 24f2005252@ds.study.iitm.ac.in
+#         run: |
+#           git config --global user.name "Daily Bot"
+#           git config --global user.email "24f2005252@ds.study.iitm.ac.in"
+#           git add daily_status.txt
+#           git commit -m "Daily update $(date -u)" || echo "No changes to commit"
+#           git push
